# pdfebook

./: LICENSE  README.md  pyproject.toml
src/pdfebook/: __init__.py
